--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "thoughtpad-plugin-compiler-markdown",
   "version": "0.0.1",
-  "description": "Thoughtpad plugin for markdown into css compilation",
+  "description": "Thoughtpad plugin for markdown into html compilation",
   "engines": {
     "node": "0.11",
     "npm": "1.4"
