--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "thoughtpad-plugin-compiler-markdown",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Thoughtpad plugin for markdown into html compilation",
   "engines": {
-    "node": "0.11.14",
-    "npm": "2.0.0"
+    "node": ">= 0.12.0",
+    "iojs": ">= 1.4.1",
+    "npm": "2.6.0"
   },
   "repository" : { 
     "type" : "git", 
@@ -15,11 +16,11 @@
   },
   "devDependencies": {
     "thoughtpad-plugin-manager": "git://github.com/thoughtpad/thoughtpad-plugin-manager.git#master",
-    "should": "~3.3.2",
-    "mocha": "~1.21.4",
+    "should": "~5.0.1",
+    "mocha": "~2.1.0",
     "coveralls": "~2.11.2",
-    "istanbul-harmony": "~0.3.0",
-    "co": "~3.1.0"
+    "istanbul-harmony": "~0.3.1",
+    "co": "~4.4.0"
   },
   "main": "./src/main.js",
   "scripts": {
